I got input working! Now for the world rendering..